force remount to prevent failure if drive was previously mounted

--- a/Disco_Diffusion.ipynb
+++ b/Disco_Diffusion.ipynb
@@ -464,7 +464,7 @@
         "\n",
         "if is_colab:\n",
         "    if google_drive is True:\n",
-        "        drive.mount('/content/drive')\n",
+        "        drive.mount('/content/drive', force_remount=True)\n",
         "        root_path = '/content/drive/MyDrive/AI/Disco_Diffusion'\n",
         "    else:\n",
         "        root_path = '/content'\n",
