tweak definition of gdrive path

--- a/Disco_Diffusion.ipynb
+++ b/Disco_Diffusion.ipynb
@@ -464,8 +464,10 @@
         "\n",
         "if is_colab:\n",
         "    if google_drive is True:\n",
-        "        drive.mount('/content/drive', force_remount=True)\n",
-        "        root_path = '/content/drive/MyDrive/AI/Disco_Diffusion' #@param {type:\"string\"}\n",
+        "        drive_mount = '/content/drive'\n",
+        "        drive.mount(drive_mount, force_remount=True)\n",
+        "        drive_path = '/MyDrive/AI/Disco_Diffusion' #@param {type:\"string\"}\n",
+        "        root_path = f'{drive_mount}/{drive_path}'\n",
         "    else:\n",
         "        root_path = '/content'\n",
         "else:\n",
