--- a/Disco_Diffusion.ipynb
+++ b/Disco_Diffusion.ipynb
@@ -480,6 +480,11 @@
         "initDirPath = f'{root_path}/init_images'\n",
         "createPath(initDirPath)\n",
         "outDirPath = f'{root_path}/images_out'\n",
+        "append_timestamp = True #@param {type:\"boolean\"}\n",
+        "# timestampe in YYYYMMDD_HHMMSS format\n",
+        "timestamp = f'{datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")}'\n",
+        "# if append_timestamp is True, append timestamp string\n",
+        "outDirPath = f'{outDirPath}/{timestamp}' if append_timestamp else outDirPath\n",
         "createPath(outDirPath)\n",
         "\n",
         "if is_colab:\n",
